@@ -1,0 +1,4 @@
+guile-gnome-cairo.pc
+guile-gnome-cairo-uninstalled.pc
+Makefile
+Makefile.in
