@@ -1,3 +1,9 @@
 SUBDIRS = gnome
 
-EXTRA_DIST = ChangeLog NEWS AUTHORS README $(wildcard *.ac)
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = $(pcifiles)
+
+EXTRA_DIST = guile-gnome-cairo.pc.in guile-gnome-cairo-uninstalled.pc.in \
+	ChangeLog NEWS AUTHORS README $(wildcard *.ac)
+
+CLEANFILES = $(pcifiles) $(pcufiles)
