@@ -1,0 +1,2 @@
+guile-gnome-cairo.pc
+guile-gnome-cairo-uninstalled.pc
