@@ -3,3 +3,5 @@ PKG_CHECK_MODULES(CAIRO, guile-cairo, HAVE_CAIRO=true,
 AC_SUBST(CAIRO_CFLAGS)
 AC_SUBST(CAIRO_LIBS)
 AM_CONDITIONAL(HAVE_CAIRO, $HAVE_CAIRO)
+
+record_check cairo $HAVE_CAIRO
